# aita

./: .gitignore  .python-version  LICENSE.md  README.md  pyproject.toml
src/aita/: console.py
src/aita/tests/: test_console.py
