[tool.poetry]
name = "aita"
version = "0.1.0"
description = "AITA?"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mortengjerding/aita"
repository = "https://github.com/mortengjerding/aita"
authors = ["Morten Gjerding <mortengjerding@gmail.com>"]
keywords = ["aita"]

[tool.poetry.scripts]
aita = "aita.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.2"}
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aita"]

[tool.coverage.report]
show_missing = true
fail_under = 100
